Implementação do cache